--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "nunjucks": "^3.2.0",
     "pg": "^7.11.0",
     "sequelize": "^5.10.2"
