--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "author": "Marcelo Jean <marcelojeam1@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js -e js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.0",
     "pg": "^7.11.0",
-    "sequelize": "^5.10.2"
+    "sequelize": "^5.10.2",
+    "session-file-store": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
